Final Problem Set 8

--- a/Problem Set 8/problem_set_8.tex
+++ b/Problem Set 8/problem_set_8.tex
@@ -575,7 +575,7 @@ r^2_{vy} = r_{vy}^2 = 0.30028403545^2 = 0.09017050194
 \[
 r^2_{xy} = r_{xy}^2 = -0.31138077237^2 = 0.0969579854
 \]
-Both of these values are fairly low -- interpreting this means that just \%9.017050194 and \%9.69579854 of the variance in earnings can be explained by driving average and putting average alone, respectively.
+Both of these values are fairly low -- interpreting this means that just 9.017050194\% and 9.69579854\% of the variance in earnings can be explained by driving average and putting average alone, respectively.
 
 % End of the large subsection
 }
